deploy/yaml-test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arax-ingress-test
  namespace: rtx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=CI
    alb.ingress.kubernetes.io/security-groups: translator-ci-alb-http-sg
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  rules:
    - host: arax.ci.transltr.io
      http:
        paths:
          # - path: /* 
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssl-redirect
          #       port:
          #         number: 443
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: arax
                port:
                  number: 80
